# Game-Programming-Patterns

SampleGameEngine/: CMakeLists.txt  README.md  main.cpp
SampleGameEngine/include/actors/: Character.h  GameActor.h
SampleGameEngine/include/commands/: Command.h  ExitCommand.h  JumpCommand.h  MoveCommand.h
SampleGameEngine/include/core/: Game.h  GameHistory.h
SampleGameEngine/include/input/: ConsoleInputDevice.h  IInputDevice.h  InputHandler.h  InputKey.h
SampleGameEngine/include/types/: Direction.h
SampleGameEngine/src/actors/: Character.cpp  GameActor.cpp
SampleGameEngine/src/commands/: ExitCommand.cpp  JumpCommand.cpp  MoveCommand.cpp
SampleGameEngine/src/core/: Game.cpp  GameHistory.cpp
SampleGameEngine/src/input/: ConsoleInputDevice.cpp  InputHandler.cpp
